--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,5 @@
-DB_DIALECT=sqlite
-DB_NAME=test.sqlite
+DB_DIALECT=postgres
+DB_HOST=your_host
+DB_USER=your_user
+DB_PASS=your_pass
+DB_NAME=main_test
