--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^25.3.0",
     "typeorm": "^0.2.24"
   },
   "config": {
