--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^1.19.1",
     "sqlite3": "^4.1.1",
     "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
